# memory-orchestrator

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.db  README.md  docker-compose.yml  pyproject.toml
agents/: memory-orchestrator.AGENTS.md
alembic/: env.py
alembic/versions/: 0001_initial.py  (+1 more)
client-rules/: claude.json  codex.json
docs/: memory-dedup-conflict.md  memory-ingest-pipeline.md  memory-query-pipeline.md
frontend/: package-lock.json  package.json  vite.config.js
hooks/: stop.py  user_prompt_submit.py
memory_orchestrator_mcp/: CLAUDE.md  INSTALL.md  README.md  cli.py  pyproject.toml
memory_orchestrator_mcp/agents/: memory-orchestrator.AGENTS.md
memory_orchestrator_mcp/client_rules/: claude.json  codex.json
memory_orchestrator_mcp/hooks/: stop.py  user_prompt_submit.py
memory_orchestrator_mcp/memory_orchestrator_mcp/: cli.py
memory_orchestrator_mcp/memory_orchestrator_mcp/client_rules/: codex.json
memory_orchestrator_mcp/memory_orchestrator_mcp/hooks/: user_prompt_submit.py
memory_orchestrator_mcp/memory_orchestrator_mcp/skills/memory-orchestrator/: SKILL.md
memory_orchestrator_mcp/memory_orchestrator_mcp/skills/memory-orchestrator/scripts/: create_skeleton_node.py
memory_orchestrator_mcp/skills/memory-orchestrator/: SKILL.md  memory-types.md  skeleton-nodes.md  tools.md
memory_orchestrator_mcp/skills/memory-orchestrator/scripts/: fetch_skeleton.py
memory_orchestrator_mcp/src/memory_orchestrator_mcp/: cli.py
memory_orchestrator_mcp/src/memory_orchestrator_mcp/client_rules/: claude.json  codex.json
memory_orchestrator_mcp/tests/: test_hooks_codex.py  test_project_id.py
memory_orchestrator_server/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.base  README.md  _cleanup_projects.py  auth_tokens.py  bm25_search.py  cli.py  client_adapters.py  client_rules.py  config.py  db_check.py  download_models.py  embedder.py  graph.py  http_app.py  ingestor.py  mcp_contract.py  mcp_core.py  models.py  pyproject.toml  repository.py  reranker.py  scoring.py  settings_defaults.json
memory_orchestrator_server/alembic/versions/: 0001_initial.py  0002_project_uuid_fk.py  0002_token_encrypted.py  0003_pg_search_bm25.py  0009_api_token_enabled.py  0010_age_extension.py  0011_project_skeleton.py  0012_skeleton_node_tags.py  0013_backfill_builtin_tags.py
memory_orchestrator_server/docs/superpowers/plans/: 2026-05-14-knowledge-tree-ui.md
memory_orchestrator_server/docs/superpowers/specs/: 2026-05-14-knowledge-tree-ui-design.md
memory_orchestrator_server/frontend/: index.html  memory-card-design.html  memory-card-light.html  package-lock.json  package.json  vite.config.js
memory_orchestrator_server/frontend/src/: AdminModal.vue  App.vue  AppHeader.vue  BaseModal.vue  BrandLogo.vue  ContextMenu.vue  HelpPage.vue  MarkdownEditor.vue  MemoriesPage.vue  MemoryDetailModal.vue  MemoryEditModal.vue  NodeDetailPanel.vue  ProjectIconStrip.vue  RecallTestPage.vue  SettingsModal.vue  SettingsPage.vue  SkNode.vue  SkeletonPage.vue  SkeletonTreePanel.vue  TagPicker.vue  TokensPage.vue  api.js  icons.js  main.js  markdown.js  style.css  useLocale.js
memory_orchestrator_server/frontend/src/icons/: nodeIcons.js
memory_orchestrator_server/frontend/src/locales/: en.json  zh.json
memory_orchestrator_server/frontend/src/stores/: app.js
memory_orchestrator_server/routers/: hooks.py  mcp.py  ui.py
memory_orchestrator_server/scripts/: import_backup.ps1  rotate_all_tokens.py  show_graph.py
memory_orchestrator_server/src/memory_orchestrator_server/: alembic.ini  auth_tokens.py  cli.py  client_rules.py  config.py  embedder.py  http_app.py  mcp_contract.py  mcp_core.py  mcp_server.py  models.py  repository.py  reranker.py  scoring.py  settings_defaults.json
memory_orchestrator_server/src/memory_orchestrator_server/alembic/: env.py
memory_orchestrator_server/src/memory_orchestrator_server/alembic/versions/: 0003_system_settings.py  0006_project_user.py  0007_api_tokens.py  0008_embed_dim_1024.py
memory_orchestrator_server/src/memory_orchestrator_server/frontend/: package-lock.json
memory_orchestrator_server/src/memory_orchestrator_server/frontend/src/: App.vue
memory_orchestrator_server/src/memory_orchestrator_server/frontend/src/locales/: en.json  zh.json
memory_orchestrator_server/src/memory_orchestrator_server/routers/: ui.py
memory_orchestrator_server/src/memory_orchestrator_server/scripts/: README.md  smoke_ingest.py  smoke_save_search.py
memory_orchestrator_server/src/memory_orchestrator_server/scripts/pgvector/: readme.txt
memory_orchestrator_server/src/memory_orchestrator_server/tests/integration/: conftest.py  test_http_app.py  test_mcp_tools.py  test_repository.py
memory_orchestrator_server/src/memory_orchestrator_server/tests/unit/: test_client_adapters.py  test_client_rules.py  test_embedder.py  test_ingestor_prompts.py  test_package_boundaries.py  test_reranker.py  test_time_utils.py
memory_orchestrator_server/tests/fixtures/: test_transcript.jsonl  test_transcript_graph.jsonl
memory_orchestrator_server/tests/integration/: conftest.py  test_bm25_search.py  test_http_app.py  test_mcp_http.py  test_mcp_tools.py  test_repository.py  test_skeleton_api.py
memory_orchestrator_server/tests/unit/: test_admin_modal_source.py  test_bm25_fusion.py  test_client_rules.py  test_container_config.py  test_embedder.py  test_ingestor.py  test_ingestor_skeleton.py  test_memory_links_removed.py  test_package_boundaries.py  test_project_token_auth.py  test_scoring.py  test_skeleton_node_ops.py  test_skeleton_seed.py  test_ui_tokens_schema.py
scripts/: _clean_migrations.ps1  _fix_crlf.sh  _to_lf.ps1  _upload_fix.ps1  backup.sh  build.sh  install-rust-tsinghua.ps1  install_pgvector.ps1  push.ps1  smoke_context.sh
src/memory_orchestrator_mcp/: pyproject.toml
src/memory_orchestrator_mcp/client_rules/: claude.json  codex.json
src/memory_orchestrator_mcp/hooks/: user_prompt_submit.py
src/memory_orchestrator_mcp/tests/: test_client_adapters.py  test_client_rules.py  test_hooks_codex.py
tests/: conftest.py
(+54 files in other folders)
