[project]
name = "memory-orchestrator"
version = "0.1.0"
description = "Cross-project memory center for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "fastembed>=0.4",
    "mcp>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
mo = "memory_orchestrator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.7",
    "mypy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
