[project]
name = "memory-orchestrator"
version = "0.1.0"
description = "Cross-project memory center for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "memory-orchestrator-server",
]

[project.scripts]
mo = "memory_orchestrator.cli:main"

[tool.uv.workspace]
members = [
    "src/memory_orchestrator_server",
    "src/memory_orchestrator_mcp",
]

[tool.uv.sources]
memory-orchestrator-server = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = [
    "src/memory_orchestrator_server/tests",
    "src/memory_orchestrator_mcp/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.12",
]


[[tool.uv.index]]
# 配置清华源
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true