[project]
name = "memory-orchestrator-mcp"
version = "1.0.1"
description = "Memory Orchestrator MCP client: hooks, client rules, agents, skills"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/itwalker-001/memory-orchestrator"
Repository = "https://github.com/itwalker-001/memory-orchestrator"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
mo-mcp = "memory_orchestrator_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_orchestrator_mcp*"]
exclude = ["memory_orchestrator_mcp.tests*"]

[tool.setuptools.package-data]
memory_orchestrator_mcp = [
    "agents/**/*",
    "client_rules/*.json",
    "skills/**/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
