[project]
name = "memory-orchestrator-server"
version = "0.1.0"
description = "Memory Orchestrator server: FastAPI, PostgreSQL, embedder, frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "fastembed>=0.4",
    "mcp>=1.0",
    "openai>=1.0",
    "httpx>=0.27",
    "click>=8.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["../src"]
include = ["memory_orchestrator_server*"]
exclude = ["memory_orchestrator_server.tests*"]
