[project]
name = "memory-orchestrator-server"
version = "0.1.0"
description = "Memory Orchestrator server: FastAPI, PostgreSQL, embedder, frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "FlagEmbedding>=1.2",
    "mcp>=1.0",
    "openai>=1.0",
    "httpx>=0.27",
    "click>=8.1",
    "memory-orchestrator-mcp",
]

[project.scripts]
mo-server = "memory_orchestrator_server.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["memory_orchestrator_server*"]
exclude = ["memory_orchestrator_server.tests*"]

[tool.setuptools.package-data]
memory_orchestrator_server = [
    "frontend/dist/**/*",
    "alembic/*.mako",
    "alembic/versions/*.py",
    "scripts/**/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.uv.sources]
memory-orchestrator-mcp = { path = "../memory_orchestrator_mcp", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["src/memory_orchestrator_server/tests"]
