[project]
name = "memory-orchestrator-mcp"
version = "0.1.0"
description = "Memory Orchestrator MCP client: hooks, client rules, agents, skills"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["memory_orchestrator_mcp*"]
exclude = ["memory_orchestrator_mcp.tests*"]
